# sakd

./: .gitignore  Cargo.toml  LICENSE  README.md  td.db
src/: cli.rs  db.rs  lib.rs  main.rs  tui.rs  utils.rs
