[package]
name = "sakd"
version = "0.4.0"
edition = "2024"
description = "Fastest, most useful CLI task manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/twil3akine/sakd"
keywords = ["todo", "task", "cli", "sqlite"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
inquire = "0.7"
tabled = "0.15"
colored = "2.1"
dirs = "5.0"
unicode-width = "0.1"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
